--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -15,4 +15,6 @@ html
 				a(href="/main-page.html", target="_blank") main-page.html
 			div
 				a(href="/checkout.html", target="_blank") checkout.html
+			div
+				a(href="/order.html", target="_blank") order.html
 				
