--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -596,7 +596,12 @@ a
 		background: $pink-light
 	&:disabled
 		background: #BCBDC0
-		cursor: not-allowed 
+		cursor: not-allowed
+	&__paypal
+		width: 105px
+	&_white	
+		background: #FFF
+		color: $black 
 
 .paysys
 	font-size: 0
