--- a/src/jade/main-page.jade
+++ b/src/jade/main-page.jade
@@ -164,39 +164,8 @@ html
 									.sizes__list
 										.sizes__product Product Detail #1
 										.sizes__product Product Detail #2
-									table.sizes__table
-										thead
-											tr
-												th Size
-												th Wifth
-												th Length
-												th Sleeve
-										tbody
-											tr
-												td S
-												td 18.5”
-												td 18.5”
-												td 18.5”
-											tr
-												td M
-												td 18.5”
-												td 18.5”
-												td 18.5”
-											tr
-												td L
-												td 18.5”
-												td 18.5”
-												td 18.5”
-											tr
-												td XL
-												td 18.5”
-												td 18.5”
-												td 18.5”
-											tr
-												td XXL
-												td 18.5”
-												td 18.5”
-												td 18.5”
+									.sizes__table
+										img.sizes__table-pic(src="img/sizes.jpg", alt="")
 							//- btn
 							button.product__btn.btn BUY IT NOW
 							.product__msg Items ship 2 weeks after campaign closes
