--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -431,6 +431,9 @@ a
 			border-radius: 50%
 	&__table
 		width: 100%
+		&-pic
+			display: block
+			max-width: 100%
 		th
 			height: 44px
 			padding: 0 10px
@@ -570,6 +573,9 @@ a
 			float: left
 			width: 50%
 			padding: 0 10px
+	&__field_wide
+		+rm(1023)
+			width: 100%
 	&__field_lg
 		+rm(1023)
 			width: 65%
@@ -587,6 +593,10 @@ a
 		+rm(719)
 			+extrabold
 			font-size: 20px
+	&__label,
+	&__wrap
+		&_hidden
+			display: none
 
 .input
 	width: 100%
@@ -670,7 +680,9 @@ a
 			font-size: 14px
 			color: $gray-dark 
 			&:hover
-				text-decoration: none 
+				text-decoration: none
+	&__fieldset
+		display: none
 
 .tabs
 	&__nav
