--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -586,6 +586,10 @@ a
 			width: 35%
 	&__btn
 		width: 100%
+	&__or
+		font-size: 20px
+		text-transform: uppercase
+		text-align: center
 
 .field
 	margin-bottom: 5px
@@ -599,6 +603,12 @@ a
 	&__wrap
 		&_hidden
 			display: none
+	&_style
+		margin-bottom: 20px
+	&_style &__label
+		+extrabold
+		font-size: 18px
+		text-transform: uppercase
 
 .input
 	width: 100%
@@ -1236,12 +1246,10 @@ a
 				position: absolute
 				top: 0
 				right: 0
-				bottom: 0
-				width: 50%
-				background: $gray-light
-			+rm(767)
 				left: 290px
+				bottom: 0
 				width: auto
+				background: $gray-light
 	&__close
 		display: none
 		position: absolute
@@ -1260,21 +1268,21 @@ a
 	&__section,
 	&__aside
 		position: relative
-		padding: 35px 25px 30px
-		z-index: 2 
+		padding: 20px 10px
+		z-index: 2
+		+rm(719)
+			padding: 35px 25px 30px
 	&__section
 		+rm(719)
 			float: right
-			width: 50%
-		+rm(767)
 			width: 100%
 			margin-left: -290px
 			padding-left: 320px 
 	&__aside
 		+rm(719)
+			float: left
+			width: 290px
 			overflow: hidden
-		+rm(767)
-			max-width: 290px
 
 .order
 	padding-bottom: 50px
