--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -576,6 +576,9 @@ a
 			float: left
 			width: 50%
 			padding: 0 10px
+	&__option_lg
+		+rm(1023)
+			width: 100%
 	&__field_wide
 		+rm(1023)
 			width: 100%
@@ -585,23 +588,24 @@ a
 	&__field_sm
 		+rm(1023)
 			width: 35%
-	&__btn,
-	&__option_lg
-		+rm(1023)
-			width: 100%
+	&__btn
+		width: 100%
 	&__or
+		padding: 10px 0
 		font-size: 20px
 		text-transform: uppercase
 		text-align: center
 		+rm(1023)
 			display: none
 	&__row
-		margin: 0 -10px
-		+clr
+		+rm(1023)
+			margin: 0 -10px
+			+clr
 	&__col
-		float: left
-		width: 50%
-		padding: 0 10px
+		+rm(1023)
+			float: left
+			width: 50%
+			padding: 0 10px
 
 .field
 	margin-bottom: 5px
